@@ -1,3 +1,7 @@
+2004-09-28  Jorn Baayen  <jbaayen@gnome.org>
+
+	* src/SongDatabase.cs: Fix mtime to time ticks conversion.
+
 2004-07-20  Jorn Baayen  <jbaayen@gnome.org>
 
 	* data/muine.desktop.in: Add MimeType stuff.
